RESOLVED FIXED271115
[UnifiedPDF] Can't click-drag the scrollbar
https://bugs.webkit.org/show_bug.cgi?id=271115
Summary [UnifiedPDF] Can't click-drag the scrollbar
Simon Fraser (smfr)
Reported 2024-03-16 12:43:55 PDT
In a scrollable main frame PDF, the scrollbar does not grow when hovered, and you can’t click and drag on the thumb to scroll.
Attachments
Simon Fraser (smfr)
Comment 1 2024-03-16 12:44:06 PDT
Simon Fraser (smfr)
Comment 2 2024-03-16 12:48:32 PDT
EWS
Comment 3 2024-03-16 16:14:07 PDT
Committed 276244@main (5dce1764e0a3): <https://commits.webkit.org/276244@main> Reviewed commits have been landed. Closing PR #26011 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.