Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h
@@ -297,6 +297,7 @@ protected:
     // ScrollableArea functions.
     WebCore::IntRect scrollCornerRect() const final;
     WebCore::ScrollableArea* enclosingScrollableArea() const final;
+    bool scrollAnimatorEnabled() const final { return true; }
     bool isScrollableOrRubberbandable() final { return true; }
     bool hasScrollableOrRubberbandableAncestor() final { return true; }
     WebCore::IntRect scrollableAreaBoundingBox(bool* = nullptr) const final;
